kubeadm/whoami/whoami-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
        - containerPort: 80
---

kind: Service
apiVersion: v1
metadata:
  name: whoami-svc
spec:
  selector:
    app: whoami
  ports:
    - port: 80 # Default port for image
